--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
   <body>
     <!-- TODO: ADD HTML FOR WHATEVER YOU WANT TO SHOW ON THE PAGE!  -->
+    <div class="page-wrapper">
+      <h1>Plants</h1>
+      <button onclick="showPlants()">Show me plants!</button>
+      <div id="wrapper">
+      </div>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
