--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- TODO: ADD HTML FOR WHATEVER YOU WANT TO SHOW ON THE PAGE!  -->
     <div class="page-wrapper">
       <h1>Plants</h1>
-      <button onclick="showPlants()">Show me plants!</button>
+      <button onclick="showPlants()">Show me plants discovered in 1753 :)</button>
       <div id="wrapper">
       </div>
     </div>
